*   Mail: info@wordrider.net (issue tracker is preffered) *
*   Issue tracker: http://bugtracker.wordrider.net/       *
***********************************************************
Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

21st December 2008 - FreeRapid Downloader 0.8 released
  Added : new plugin - usercash.com (crypter) [thanks to me! ;-)]
  Added : new plugin - CobraShare.sk [thanks to me! ;-)]
  Added : new plugin - flyshare.cz [thanks to me! ;-)]
  Added : new plugin - Upnito.sk [thanks to me! ;-)]
  Added : new plugin - SaveFile.com [thanks to Alex!]
  Added : new plugin - KewlShare.com [thanks to Alex!]
  Added : new plugin - EnterUpload.com [thanks to Alex!]
  Added : new plugin - MediaFire.com [thanks to Lukiz!]
  Added : new plugin - edisk.cz [thanks to Lukiz!]
  ###Added : Russian translation [thanks to CasTeT!] next time ;-)
  Added : Italian translation [thanks to Steffano!]
  Added : Japanese translation [thanks to Tilt!]
  Added : Danish translation [thanks to Topexso!]
  Added : Ukrainan translation [thanks to Vadim!]
  Added : Indonesian translation [thanks to Alex!]
  Added : Polish translation [thanks to Soft4UAdmin!]
  Added : UI - added action to remove invalid/not existing links [requested by Alex]
  Added : UI - ability to hide text under toolbar buttons [requested by Alex]
  Added : --portable command line switch for application start [requested by Rusttaf]
          - with this switch, configuration files will be stored in the 'config' folder,
            all file paths will be saved relatively to FRD folder (if possible) - useful for USB FLASH drives
  Added : support to validate links manually [requested by Alex]
  Added : option to reset existence status when application starts                  
  Added : support for plugins update + many UI settings for it